compilador/Test/Cases/should-fail/test_propios_Err_Type_7.pcf
let tst (f : Nat -> Nat -> Nat)(x y: Nat): Nat = f x y

let bin (x y: Nat) : Nat = y + 1 + x

let res : Nat = bin + 5